deal with the client automatically escaping request strings

--- a/public_html/quests.html
+++ b/public_html/quests.html
@@ -28,9 +28,11 @@
 	</table>
 	</div>
 
+	<div id="questSelectDiv">
+		<input type="text" id="questName" />
+		<select id="questSelect" class="hidden"></select>
+	</div>
 	<div id="questTreeDiv">
-		<input type="text" id="questName" class="center" />
-		<select id="questSelect" class="center"></select>
 		<h2 id="baseQuest" class="center"></h2>
 		<div id="questTree" class="center"></div>
 	</div>
